fix: header z-index

--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -22,7 +22,7 @@ body:has(.main-hero) {
 
 .header {
     position: relative;
-    z-index: 1;
+    z-index: 20;
     height: var(--header-height);
     color: var(--base_400);
     font: var(--text-lg_300);
@@ -125,12 +125,12 @@ body:has(.main-hero) {
     }
 
     &__logo {
-        filter: var(--filter-base_400);
         position: absolute;
         z-index: 10;
         top: 24px;
         left: 50%;
         translate: -50% 0;
+        filter: var(--filter-base_400);
     }
 }
 
@@ -187,7 +187,6 @@ body:has(.main-hero) {
                 display: flex;
 
                 button {
-                    filter: var(--filter-base_400);
                     padding: 14px;
                     width: 162px;
                     height: 100px;
@@ -196,6 +195,7 @@ body:has(.main-hero) {
                     justify-content: space-between;
                     font: var(--text-lg_300);
                     letter-spacing: 0.01rem;
+                    filter: var(--filter-base_400);
                     border-radius: 4px;
                     border: 1px solid hsla(7, 15%, 34%, 0.2);
 
